make play butto fix bottom

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <div id="result" class="container hidden">
+    <div id="result" class="container">
       <div id="chart"></div>
       <div id="log"></div>
     </div>
-    <div id="control" class="container">
+    <div id="control" class="fix-bottom">
       <input id="start-record" type="image" src="img/play.png" name="startRecord" class="center"/>
     </div>
 
