change icon and switch between play and pause status

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div id="log"></div>
     </div>
     <div id="control" class="fix-bottom">
-      <input id="start-record" type="image" src="img/play.png" name="startRecord" class="center"/>
+      <img id="play-btn" src="img/play.svg" class="center"/>
     </div>
 
     <script src="js/main.js"></script>
