show devicemotion log

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div id="result" class="container">
       <div id="chart"></div>
-      <div id="log"></div>
+      <textarea id="log" rows="10"></textarea>
     </div>
     <div id="control" class="fix-bottom">
       <img id="play-btn" src="img/play.svg" class="center"/>
